@@ -7,6 +7,10 @@ HYPERMAIL VERSION 3.0.0
 
 2023-00-00 Jose Kahan
 	* src/{parse.c}
+	For attachment filenames, if the line was folded after the atrribute
+	and the value itself (quoted or not), parsing the filename could result
+	in a single space filename.
+
 	Spaces in attachment filenames were not being replaced with
 	REPLACEMENT_CHAR (_) when the filename was made of only spaces.
 
